Fix alignment on right arrow of confirm tx screens

--- a/ui/app/css/itcss/components/account-menu.scss
+++ b/ui/app/css/itcss/components/account-menu.scss
@@ -21,6 +21,7 @@
   }
 
   &__icon {
+    margin-left: 20px;
     cursor: pointer;
   }
 
