--- a/ui/app/css/itcss/components/header.scss
+++ b/ui/app/css/itcss/components/header.scss
@@ -75,7 +75,6 @@ h2.page-subtitle {
   display: flex;
   flex-direction: row;
   align-items: center;
-  margin-right: 20px;
 }
 
 .left-menu-wrapper {
